<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/lib/com.google.ads"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bkg_main"
    android:gravity="center"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/tv_app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:text="@string/app_name"
        android:textColor="@android:color/white"
        android:textSize="30sp" />

    <ImageView
        android:id="@+id/iv_how"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="220dp"
        android:contentDescription="@drawable/how_old"
        android:src="@drawable/how_old" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_marginBottom="120dp"
        android:gravity="center"
        android:orientation="vertical" >

        <Button
            android:id="@+id/bt_gallery"
            style="?android:attr/textAppearanceLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin"
            android:background="@drawable/btn_main"
            android:padding="@dimen/padding"
            android:text="@string/gallery"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/bt_camera"
            style="?android:attr/textAppearanceLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin"
            android:background="@drawable/btn_main"
            android:padding="@dimen/padding"
            android:text="@string/camera"
            android:textColor="@android:color/white" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_copyright"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|bottom"
        android:layout_marginBottom="55dp"
        android:text="@string/copyright"
        android:textColor="@android:color/white"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/tv_guide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|bottom"
        android:layout_marginBottom="230dp"
        android:text="@string/guide"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@android:color/white"
        android:textSize="20sp" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginBottom="70dp"
        android:gravity="center"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/bt_rate"
            style="?android:attr/textAppearanceMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin"
            android:background="@drawable/btn_main"
            android:text="@string/rate"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/bt_other"
            style="?android:attr/textAppearanceMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_margin="@dimen/margin"
            android:background="@drawable/btn_main"
            android:text="@string/other"
            android:textColor="@android:color/white" />
    </FrameLayout>

    <com.google.ads.AdView
        android:id="@+id/av_admob"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        ads:adSize="BANNER"
        ads:adUnitId="@string/admob_banner"
        ads:loadAdOnCreate="true" />

</FrameLayout>